@@ -3,7 +3,7 @@
     
  <stylesheet id="reset.css" insert-before="*" /> 
  <stylesheet id="decogrids-16.css" />
- <stylesheet id="main.css" />
+ <stylesheet id="main.css" media="" />
  <stylesheet id="ploneCustom.css" insert-after="main.css" /> 
  <stylesheet id="IEFixes.css" insert-after="*" enabled="1"
              conditionalcomment="lt IE 9" /> 
